[package]
name = "solend-program"
version = "2.0.2"
description = "Solend Program"
authors = ["Solend Maintainers <maintainers@solend.fi>"]
repository = "https://github.com/solendprotocol/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
bytemuck = "1.5.1"
# pyth-sdk-solana = "0.8.0"
# pyth-solana-receiver-sdk = "0.3.0"
solana-program = "=1.16.20"
solend-sdk = { path = "../sdk" }
oracles = { path = "../oracles" }
spl-token = { version = "3.3.0", features=["no-entrypoint"] }
static_assertions = "1.1.0"

[dev-dependencies]
anchor-lang = "0.28.0"
assert_matches = "1.5.0"
bytemuck = "1.5.1"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-program-test = "=1.16.20"
solana-sdk = "=1.16.20"
serde = "1.0.140"
serde_yaml = "0.8"
thiserror = "1.0"
bincode = "1.3.3"
borsh = "0.10.3"
pyth-sdk-solana = "0.8.0"
pyth-solana-receiver-sdk = "0.3.0"
switchboard-on-demand = "0.1.12"
switchboard-program = "0.2.0"
switchboard-v2 = "0.1.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "solend_program"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
